src/test/deca/context/valid/operation-binaire-nequals.deca
// Description:
//    opération binaire not equals
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    1 != 2;
}