src/test/deca/context/invalid/3.33-test-nequals.deca
// Description:
//    Test 3.3 fail avec not equals 
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1 != "hello world";
}